--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "declaration": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": "."
   },
-  "include": ["./scripts", "./test", "./typechain"],
+  "include": ["./scripts", "./test", "typechain"],
   "files": ["./hardhat.config.ts"]
 }
